--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <form class="form">
+      <input
+        type="text"
+        class="form-control"
+        name="text"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="btn" name="btn-submit">Search</button>
+    </form>
+    <span class="loader"></span>
+    <div class="gallery"></div>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
