--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,7 @@
     <span class="loader"></span>
     <div class="gallery"></div>
     <script src="./main.js" type="module"></script>
+    <script src="./js/pixabay-api.js" type="module"></script>
+    <script src="./js/render-functions.js" type="module"></script>
   </body>
 </html>
